--- a/ItemsCRUDApp.API/appsettings.json
+++ b/ItemsCRUDApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "LocalConnection": "Server=(localdb)\\mssqllocaldb;Database=ItemsDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
