--- a/ItemsCRUDApp.API/appsettings.json
+++ b/ItemsCRUDApp.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "LocalConnection": "Server=(localdb)\\mssqllocaldb;Database=ItemsCrudDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "LocalConnection": "Server=(localdb)\\mssqllocaldb;Database=ItemsCrudDBTest;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
