--- a/ItemsCRUDApp.API/appsettings.Development.json
+++ b/ItemsCRUDApp.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Connection": "Server=(localdb)\\mssqllocaldb;Database=ItemsCrudDBTest;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
