--- a/ItemsCRUDApp.Tests/ItemsCRUDApp.Tests.csproj
+++ b/ItemsCRUDApp.Tests/ItemsCRUDApp.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.9" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="Moq" Version="4.14.7" />
@@ -23,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ItemsCRUDApp.Data\ItemsCRUDApp.Data.csproj" />
+    <ProjectReference Include="..\ItemsCRUDApp.Domain\ItemsCRUDApp.Domain.csproj" />
   </ItemGroup>
 
 </Project>
